Improved mention parsing.